--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vitest": "^1.5.0"
   },
   "dependencies": {
-    "encore.dev": "^1.41.12"
+    "encore.dev": "^1.41.12",
+    "jose": "^5.9.6"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.13.0"
