--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "vitest": "^1.5.0"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "encore.dev": "^1.41.12",
-    "jose": "^5.9.6"
+    "jose": "^5.9.6",
+    "knex": "^3.1.0",
+    "pg": "^8.13.1"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.13.0"
