--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "cookie": "^1.0.1",
     "encore.dev": "^1.41.12",
     "jose": "^5.9.6",
     "knex": "^3.1.0",
