--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.16",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.1",
     "encore.dev": "^1.41.12",
     "jose": "^5.9.6",
     "knex": "^3.1.0",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "typesafe-i18n": "^5.26.2"
   },
