--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "encore.dev": "^1.41.12",
     "jose": "^5.9.6",
     "knex": "^3.1.0",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "typesafe-i18n": "^5.26.2"
