--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
+    "soap": "^1.1.7",
     "typesafe-i18n": "^5.26.2",
     "xlsx": "^0.18.5"
   },
